@startuml

title __SPECIALENTITIES's Class Diagram__\n

  namespace  {
    namespace SpecialEntities {
      class SpecialEntities.BrickWithNextLevelDoors {
          + BrickWithNextLevelDoors()
          + die()
          + render()
          + update()
      }
    }
  }
  

  namespace  {
    namespace pecialEntities {
      class SpecialEntities.BrickWithSpeedUp {
          + BrickWithSpeedUp()
          + die()
          + render()
          + update()
      }
    }
  }
  

  namespace  {
    namespace pecialEntities {
      class SpecialEntities.FireBoost {
          + FireBoost()
          + render()
          + update()
      }
    }
  }
  

  namespace  {
    namespace pecialEntities {
      class SpecialEntities.NextLevelEntity {
          ~ f : JFrame
          + NextLevelEntity()
          + checkCollisionWithPlayer()
          + render()
          + update()
      }
    }
  }
  

  namespace  {
    namespace pecialEntities {
      abstract class SpecialEntities.SpecialEntity {
          # active : boolean
          # bounds : Rectangle
          # height : int
          # width : int
          # x : float
          # y : float
          + SpecialEntity()
          + getCollisionBounds()
          + isActive()
          {abstract} + render()
          + setActive()
          {abstract} + update()
      }
    }
  }
  

  namespace  {
    namespace pecialEntities {
      class SpecialEntities.SpecialEntityManager {
          {static} - specialEntities : ArrayList<SpecialEntity>
          + SpecialEntityManager()
          + addSpecialEntity()
          {static} + getSpecialEntities()
          + render()
          + update()
      }
    }
  }
  

  namespace  {
    namespace pecialEntities {
      class SpecialEntities.SpeedUpBoost {
          + SpeedUpBoost()
          + checkCollisionWithPlayer()
          + render()
          + update()
      }
    }
  }
  

  SpecialEntities.BrickWithNextLevelDoors -up-|> entities.StaticEntity
  SpecialEntities.BrickWithSpeedUp -up-|> entities.StaticEntity
  SpecialEntities.FireBoost -up-|> SpecialEntities.SpecialEntity
  SpecialEntities.NextLevelEntity -up-|> SpecialEntities.SpecialEntity
  SpecialEntities.NextLevelEntity o-- entities.Player : player
  SpecialEntities.SpecialEntity o-- DynaBlaster.Handler : handler
  SpecialEntities.SpecialEntityManager o-- DynaBlaster.Handler : handler
  SpecialEntities.SpeedUpBoost -up-|> SpecialEntities.SpecialEntity
  SpecialEntities.SpeedUpBoost o-- entities.Player : player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
